@@ -1,3 +1,9 @@
+2010-01-24 04:06-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* WinNSMenu.m: Added locking mechanism to prevent concurrent update
+	of menu from separate threads and to prevent processing of
+	processCommand: messages until update of the menu is completed.
+
 2010-01-24 03:09-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* WinNSMenu.m: Added function to delete the menu for the update
